# AvP

./: .gitignore  AGENT-WORKFLOW.md  AGENTS.md  README.md  STATUS.md  presentation.html
skills/VulnRemediation/: SKILL.md  pyproject.toml
skills/VulnRemediation/Workflows/: FetchFindings.md  Remediate.md  SelectStrategy.md  ShipPR.md  TriageFindings.md  ValidateFix.md
skills/VulnRemediation/src/: pyproject.toml
skills/VulnRemediation/src/vuln_remediation/: __init__.py  cli.py  config.py  github.py  models.py
skills/VulnRemediation/src/vuln_remediation/safety/: changelog.py  ghsa.py  osv.py
skills/VulnRemediation/src/vuln_remediation/scanners/: __init__.py  base.py  (+2 more)
skills/VulnRemediation/tests/: test_models.py  test_scanners.py
skills/VulnRemediation/tests/fixtures/: snyk_response.json
skills/VulnRemediation/tests/nodegoat/: 01-npm-audit-raw.json  02-findings-normalized.json  03-generic-adapter-output.json  04-osv-check-express.json  05-osv-check-marked.json  06-changelog-express.json  07-pr-template-data.json  08-remediation-record.json  09-rendered-pr-body.md  10-rendered-checklist.md  11-rendered-decision-log.md  12-changelog-marked.json  README.md
skills/VulnRemediation/tests/vampi/: 01-osv-scan-raw.json  02-generic-adapter-all.json  03-generic-adapter-high-crit.json  04-triage-summary.json  05-osv-check-flask.json  06-osv-check-pyjwt.json  07-changelog-flask.json  08-changelog-pyjwt.json  09-dedup-check.json  10-pr-template-data.json  11-remediation-record.json  12-rendered-pr-body.md  13-rendered-checklist.md  14-rendered-decision-log.md  README.md
(+23 files in other folders)
